--- a/index.html
+++ b/index.html
@@ -102,11 +102,52 @@
     </div>
   </section>
 
+  
+  <!-- Teams -->
+  <section class="c-teams">
+    <div class="c-team">
+      <h1 class="c-team__title">Team 1</h1>
+      <ul class="c-team__list">
+        <li><a href="#alex">Alex</a></li>
+        <li><a href="#ht">HT</a></li>
+        <li><a href="#suraj">Suraj</a></li>
+        <li><a href="#vicky">Vicky</a></li>
+      </ul>
+    </div>
+    <div class="c-team">
+      <h1 class="c-team__title">Team 2</h1>
+      <ul class="c-team__list">
+        <li><a href="#finn">Finn</a></li>
+        <li><a href="#erica">Erica</a></li>
+        <li><a href="#tanya">Tanya</a></li>
+        <li><a href="#jae">Jae</a></li>
+      </ul>
+    </div>
+    <div class="c-team">
+      <h1 class="c-team__title">Team 3</h1>
+      <ul class="c-team__list">
+        <li><a href="#raph">Raph</a></li>
+        <li><a href="#charlotte">Charlotte</a></li>
+        <li><a href="#olivia">Olivia</a></li>
+        <li><a href="#chaerim">Chaerim</a></li>
+      </ul>
+    </div>
+    <div class="c-team">
+      <h1 class="c-team__title">Team 4</h1>
+      <ul class="c-team__list">
+        <li><a href="#om">Om</a></li>
+        <li><a href="#anusha">Anusha</a></li>
+        <li><a href="#annika">Annika</a></li>
+        <li><a href="#viggy">Vignesh</a></li>
+      </ul>
+    </div>
+  </section>
+
   <!-- Golfers -->
   <section class="c-golfers">
     <h1 class="c-golfers__header">Meet the Golfers</h1>
     <div class="c-golfer">
-      <div class="c-golfer__name">Alex Bao</div>
+      <div class="c-golfer__name" id="alex">Alex Bao</div>
       <div class="c-golfer__img"><img src="images/alex-bao.png" alt=""></div>
       <div class="c-golfer__nickname">Kid Genius</div>
       <div class="c-golfer__ratings">
@@ -120,7 +161,7 @@
       <div class="c-golfer__blurb">I rotate between 3 catch phrases</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Annika Sharp</div>
+      <div class="c-golfer__name" id="annika">Annika Sharp</div>
       <div class="c-golfer__img"><img src="images/annika-sharp.jpeg" alt=""></div>
       <div class="c-golfer__nickname">Ms. Worldwide</div>
       <div class="c-golfer__ratings">
@@ -134,7 +175,7 @@
       <div class="c-golfer__blurb">Ask about my dog's passport</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Olivia Bemis-Driscoll</div>
+      <div class="c-golfer__name" id="olivia">Olivia Bemis-Driscoll</div>
       <div class="c-golfer__img"><img src="images/olivia-bemis-driscoll.jpeg" alt=""></div>
       <div class="c-golfer__nickname">Bri'ish Innit Bruv</div>
       <div class="c-golfer__ratings">
@@ -147,7 +188,7 @@
       <div class="c-golfer__blurb">Cheeky Chewsday</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Om Naphade</div>
+      <div class="c-golfer__name" id="om">Om Naphade</div>
       <div class="c-golfer__img"><img src="images/om-naphade.jpeg" alt=""></div>
       <div class="c-golfer__nickname">Mr. StealYourGurl</div>
       <div class="c-golfer__ratings">
@@ -161,7 +202,7 @@
       <div class="c-golfer__blurb">Want to get comita?</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Tanya Deshpande</div>
+      <div class="c-golfer__name" id="tanya">Tanya Deshpande</div>
       <div class="c-golfer__img"><img src="images/tanya-deshpande.jpeg" alt=""></div>
       <div class="c-golfer__nickname">Rat</div>
       <div class="c-golfer__ratings">
@@ -175,7 +216,7 @@
       <div class="c-golfer__blurb">Commencing hoe phase.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Finn Harrington</div>
+      <div class="c-golfer__name" id="finn">Finn Harrington</div>
       <div class="c-golfer__img"><img src="images/finn-harrington.jpeg" alt=""></div>
       <div class="c-golfer__nickname">Life Convict</div>
       <div class="c-golfer__ratings">
@@ -192,7 +233,7 @@
       <div class="c-golfer__blurb">Menace to sobriety.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Anusha Srinivasan</div>
+      <div class="c-golfer__name" id="anusha">Anusha Srinivasan</div>
       <div class="c-golfer__img"><img src="images/anusha-srinivasan.png" alt=""></div>
       <div class="c-golfer__nickname">Lil' Shit</div>
       <div class="c-golfer__ratings">
@@ -206,7 +247,7 @@
       <div class="c-golfer__blurb">Beethoven's biggest fan.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Harrison Theriault</div>
+      <div class="c-golfer__name" id="ht">Harrison Theriault</div>
       <div class="c-golfer__img"><img src="images/harrison-theriault.jpg" alt=""></div>
       <div class="c-golfer__nickname">Corporate Shill</div>
       <div class="c-golfer__ratings">
@@ -220,7 +261,7 @@
       <div class="c-golfer__blurb">Classics major Lol.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Soorej Anind</div>
+      <div class="c-golfer__name" id="suraj">Soorej Anind</div>
       <div class="c-golfer__img"><img src="images/suraj-anand.png" alt=""></div>
       <div class="c-golfer__nickname">Budget Om</div>
       <div class="c-golfer__ratings">
@@ -234,7 +275,7 @@
       <div class="c-golfer__blurb">Pro-MILFs. Anti-women.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Vicky Chen</div>
+      <div class="c-golfer__name" id="vicky">Vicky Chen</div>
       <div class="c-golfer__img"><img src="images/vicky-chen.jpeg" alt=""></div>
       <div class="c-golfer__nickname">V Money</div>
       <div class="c-golfer__ratings">
@@ -248,7 +289,7 @@
       <div class="c-golfer__blurb">Neil's slut.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Neil Xu</div>
+      <div class="c-golfer__name" id="neil">Neil Xu</div>
       <div class="c-golfer__img"><img src="images/neil-xu.png" alt="UPLOAD YOUR SHIT NEIL"></div>
       <div class="c-golfer__nickname">&hearts;Her's&hearts; &uarr;</div>
       <div class="c-golfer__ratings">
@@ -262,7 +303,7 @@
       <div class="c-golfer__blurb">As useful as a celibate hooker</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Vignesh Pandiarajan</div>
+      <div class="c-golfer__name" id="viggy">Vignesh Pandiarajan</div>
       <div class="c-golfer__img"><img src="images/vignesh-pandiarajan.jpg" alt="UPLOAD YOUR SHIT VIGNESH"></div>
       <div class="c-golfer__nickname">Massive Dub</div>
       <div class="c-golfer__ratings">
@@ -276,7 +317,7 @@
       <div class="c-golfer__blurb">Not as massive dong</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Charlotte Lee</div>
+      <div class="c-golfer__name" id="charlotte">Charlotte Lee</div>
       <div class="c-golfer__img"><img src="images/charlotte-lee.jpg" alt="UPLOAD YOUR SHIT CHARLOTTE"></div>
       <div class="c-golfer__nickname">Hiu Yau Chan Lee</div>
       <div class="c-golfer__ratings">
@@ -290,7 +331,7 @@
       <div class="c-golfer__blurb">Aspiring Brit</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Chaerim Kang</div>
+      <div class="c-golfer__name" id="chaerim">Chaerim Kang</div>
       <div class="c-golfer__img"><img src="images/chaerim-kang.jpeg" alt="UPLOAD YOUR SHIT CHAERIM"></div>
       <div class="c-golfer__nickname">King Kang???</div>
       <div class="c-golfer__ratings">
@@ -304,7 +345,7 @@
       <div class="c-golfer__blurb">Looking different today</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Erica Nam</div>
+      <div class="c-golfer__name" id="erica">Erica Nam</div>
       <div class="c-golfer__img"><img src="images/erica-nam.jpeg" alt="UPLOAD YOUR SHIT ERICA"></div>
       <div class="c-golfer__nickname">HyunJee Nam</div>
       <div class="c-golfer__ratings">
@@ -318,7 +359,7 @@
       <div class="c-golfer__blurb">Master Chef Sr.</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Jae Ahn</div>
+      <div class="c-golfer__name" id="jae">Jae Ahn</div>
       <div class="c-golfer__img"><img src="images/jae-ahn.jpeg" alt="UPLOAD YOUR SHIT JAE"></div>
       <div class="c-golfer__nickname">Yul's Weird Brother</div>
       <div class="c-golfer__ratings">
@@ -332,7 +373,7 @@
       <div class="c-golfer__blurb">Busy bumping keys with Nancy Pelosi</div>
     </div>
     <div class="c-golfer">
-      <div class="c-golfer__name">Raphael Li</div>
+      <div class="c-golfer__name" id="raph">Raphael Li</div>
       <div class="c-golfer__img"><img src="images/raphael-li.jpeg" alt="UPLOAD YOUR SHIT RAPH"></div>
       <div class="c-golfer__nickname">Carmel Pride</div>
       <div class="c-golfer__ratings">
@@ -344,46 +385,6 @@
         <div class="c-golfer__rating">Overall: 62</div>
       </div>
       <div class="c-golfer__blurb">Hiding down here from Vicky</div>
-    </div>
-  </section>
-
-  <!-- Teams -->
-  <section class="c-teams">
-    <div class="c-team">
-      <h1 class="c-team__title">Team 1</h1>
-      <ul class="c-team__list">
-        <li>Alex</li>
-        <li>HT</li>
-        <li>Suraj</li>
-        <li>Vicky</li>
-      </ul>
-    </div>
-    <div class="c-team">
-      <h1 class="c-team__title">Team 2</h1>
-      <ul class="c-team__list">
-        <li>Finn</li>
-        <li>Erica</li>
-        <li>Tanya</li>
-        <li>Jae</li>
-      </ul>
-    </div>
-    <div class="c-team">
-      <h1 class="c-team__title">Team 3</h1>
-      <ul class="c-team__list">
-        <li>Raph</li>
-        <li>Charlotte</li>
-        <li>Olivia</li>
-        <li>Chaerim</li>
-      </ul>
-    </div>
-    <div class="c-team">
-      <h1 class="c-team__title">Team 4</h1>
-      <ul class="c-team__list">
-        <li>Om</li>
-        <li>Anusha</li>
-        <li>Annika</li>
-        <li>Vignesh</li>
-      </ul>
     </div>
   </section>
 
