--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
         <li>PK Shootout</li>
         <li>Say it or shot it</li>
         <li>Standup jokes</li>
+        <li>CIT Library foosball</li>
         <li>Karaoke</li>
         <li>Pickup lines</li>
       </ul>
